src/test/ui/or-patterns/exhaustiveness-unreachable-pattern.stderr
error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:8:9
   |
LL |         (1,) => {}
   |         ^^^^
   |
note: the lint level is defined here
  --> $DIR/exhaustiveness-unreachable-pattern.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:13:9
   |
LL |         (2,) => {}
   |         ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:19:9
   |
LL |         (1 | 2,) => {}
   |         ^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:24:9
   |
LL |         (1, 3) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:25:9
   |
LL |         (1, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:26:9
   |
LL |         (2, 4) => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:27:9
   |
LL |         (2 | 1, 4) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:29:9
   |
LL |         (1, 4 | 5) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:37:9
   |
LL |         (Some(1),) => {}
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:38:9
   |
LL |         (None,) => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:43:9
   |
LL |         ((1..=4,),) => {}
   |         ^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:48:14
   |
LL |         (1 | 1,) => {}
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:52:19
   |
LL |         (0 | 1) | 1 => {}
   |                   ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:58:14
   |
LL |         0 | (0 | 0) => {}
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:58:18
   |
LL |         0 | (0 | 0) => {}
   |                  ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:66:13
   |
LL | /             Some(
LL | |                 0 | 0) => {}
   | |______________________^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:72:15
   |
LL |             | 0
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:74:15
   |
LL |             | 0] => {}
   |               ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:82:10
   |
LL |         [1
   |          ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:94:10
   |
LL |         [true
   |          ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:101:36
   |
LL |         (true | false, None | Some(true
   |                                    ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:106:14
   |
LL |             (true
   |              ^^^^
...
LL |         (true | false, None | Some(t_or_f!())) => {}
   |                                    --------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:117:14
   |
LL |         Some(0
   |              ^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:136:19
   |
LL |                 | false) => {}
   |                   ^^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:144:15
   |
LL |             | true) => {}
   |               ^^^^

error: unreachable pattern
  --> $DIR/exhaustiveness-unreachable-pattern.rs:150:15
   |
LL |             | true,
   |               ^^^^

error: aborting due to 26 previous errors

